@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import net.potatocloud.node.Node;
 import net.potatocloud.node.command.Command;
 import net.potatocloud.node.command.CommandManager;
+import net.potatocloud.node.command.SubCommand;
 import net.potatocloud.node.command.TabCompleter;
 import net.potatocloud.node.screen.Screen;
 import net.potatocloud.node.screen.ScreenManager;
@@ -14,6 +15,7 @@ import org.jline.reader.Completer;
 import org.jline.reader.LineReader;
 import org.jline.reader.ParsedLine;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
@@ -44,7 +46,7 @@ public class ConsoleCompleter implements Completer {
                 candidates.add(new Candidate("back"));
                 candidates.add(new Candidate("cancel"));
 
-                final List<String> possibleChoices = currentSetup.getQuestions().get(currentSetup.getCurrentIndex()).getPossibleChoices();
+                final List<String> possibleChoices = currentSetup.getQuestions().get(currentSetup.getCurrentIndex()).getPossibleChoices(currentSetup.getAnswers());
                 if (possibleChoices != null) {
                     for (String possibleChoice : possibleChoices) {
                         candidates.add(new Candidate(possibleChoice));
@@ -64,22 +66,44 @@ public class ConsoleCompleter implements Completer {
                 }
             }
         } else {
-            final String commandName = words.get(0);
+            final String commandName = words.getFirst();
             final Command command = commandManager.getCommand(commandName);
             if (command == null) {
                 return;
             }
 
+            final String[] args = words.subList(1, words.size()).toArray(new String[0]);
+
+            if (!command.getSubCommands().isEmpty() && args.length > 0) {
+                final SubCommand subCommand = command.getSubCommand(args[0]);
+
+                if (subCommand == null) {
+                    for (SubCommand sub : command.getSubCommands()) {
+                        if (sub.getName().startsWith(args[0])) {
+                            candidates.add(new Candidate(sub.getName()));
+                        }
+                    }
+                    return;
+                }
+
+                if (subCommand instanceof TabCompleter completer) {
+                    for (String suggestion : completer.complete(Arrays.copyOfRange(args, 1, args.length))) {
+                        if (suggestion.startsWith(currentWord)) {
+                            candidates.add(new Candidate(suggestion));
+                        }
+                    }
+                }
+                return;
+            }
+
             if (command instanceof TabCompleter completer) {
-
-                final String[] args = words.subList(1, words.size()).toArray(new String[0]);
-
                 for (String suggestion : completer.complete(args)) {
                     if (suggestion.startsWith(currentWord)) {
                         candidates.add(new Candidate(suggestion));
                     }
                 }
             }
+
         }
     }
 }
